# aiops-vs-traditional-it

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci_build_test.yml
AIOps-Cloud-Capabilities/: .gitignore  requirements.txt
AIOps-Cloud-Capabilities/.github/workflows/: cd_deploy_infra.yml  ci_build_test.yml
AIOps-Cloud-Capabilities/docs/: alert_management_deep_dive.md  optimization_continuous_efficiency.md  resolution_automation_deep_dive.md
docs/: anomaly_detection_deep_dive.md  optimization_continuous_efficiency.md  rca_automated_diagnosis.md  resolution_automation_deep_dive.md
tests/unit/: test_correlator.py  test_rca_model.py
